// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`autolink.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
<https://www.example.com>

<hello@example.com>

<mailto:hello@example.com>

=====================================output=====================================
<https://www.example.com>

<hello@example.com>

<mailto:hello@example.com>

================================================================================
`;

exports[`empty-url.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
[link](<> "title")

[link](<>)

[link]()

---

![link](<> "title")

![link](<>)

![link]()

---

[link]: <> "title"

[link]: <>

=====================================output=====================================
[link](<> "title")

[link](<>)

[link](<>)

---

![link](<> "title")

![link](<>)

![link](<>)

---

[link]: <> "title"
[link]: <>

================================================================================
`;

exports[`encodedLink.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
[link](https://www.google.fr/()foo->bar)
[link](https://www.google.fr/foo->bar)
[link](https://www.google.fr/foo-%3Ebar)
[link](https://www.google.fr/foo-<bar)
[link](https://www.google.fr/foo-%3Cbar)
[link](\\<)
[link](\\()
[link](\\\\)
[link](<	>)

![link](https://www.google.fr/()foo->bar)
![link](https://www.google.fr/foo->bar)
![link](https://www.google.fr/foo-%3Ebar)
![link](https://www.google.fr/foo-<bar)
![link](https://www.google.fr/foo-%3Cbar)
![link](\\<)
![link](\\()
![link](\\\\)
![link](<	>)

[link]: https://www.google.fr/()foo->bar
[link]: https://www.google.fr/foo->bar
[link]: https://www.google.fr/foo-%3Ebar
[link]: https://www.google.fr/foo-<bar
[link]: https://www.google.fr/foo-%3Cbar
[link]: \\<
[link]: \\(
[link]: \\\\
[link]: <	>

=====================================output=====================================
[link](<https://www.google.fr/()foo-\\>bar>)
[link](https://www.google.fr/foo->bar) [link](https://www.google.fr/foo-%3Ebar)
[link](https://www.google.fr/foo-<bar) [link](https://www.google.fr/foo-%3Cbar)
[link](\\<) [link](\\() [link](\\\\) [link](<	>)

![link](https://www.google.fr/()foo->bar)
![link](https://www.google.fr/foo->bar)
![link](https://www.google.fr/foo-%3Ebar)
![link](https://www.google.fr/foo-<bar)
![link](https://www.google.fr/foo-%3Cbar) ![link](\\<) ![link](\\() ![link](\\\\)
![link](<	>)

[link]: https://www.google.fr/()foo->bar
[link]: https://www.google.fr/foo->bar
[link]: https://www.google.fr/foo-%3Ebar
[link]: https://www.google.fr/foo-<bar
[link]: https://www.google.fr/foo-%3Cbar
[link]: <\\<>
[link]: <(>
[link]: \\\\
[link]: <	>

================================================================================
`;

exports[`entity.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
[Test](http://localhost:8080/test?language=DE&currency=EUR)

=====================================output=====================================
[Test](http://localhost:8080/test?language=DE&currency=EUR)

================================================================================
`;

exports[`long.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
[podium context](https://github.schibsted.io/finn/podium/tree/master/packages/podium-context)

=====================================output=====================================
[podium context](https://github.schibsted.io/finn/podium/tree/master/packages/podium-context)

================================================================================
`;

exports[`simple.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
[hello](#world)

=====================================output=====================================
[hello](#world)

================================================================================
`;

exports[`url.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
https://www.example.com/

=====================================output=====================================
https://www.example.com/

================================================================================
`;

exports[`url-escape-idempotency.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
# https://github.com/prettier/prettier/issues/19588

[test](/hello?foo&quot\\;bar)

[test](/hello?foo&quot;bar)

[normal](/path/to/page?q=1&r=2)

[with title](/url "title")

[autolink](https://example.com)

[spaced](<url with spaces>)

[paren](/url(foo)bar)

[nested](/url(a(b)c)d)

![image](https://example.com/img.png)

=====================================output=====================================
# https://github.com/prettier/prettier/issues/19588

[test](/hello?foo&quot\\;bar)

[test](/hello?foo"bar)

[normal](/path/to/page?q=1&r=2)

[with title](/url "title")

[autolink](https://example.com)

[spaced](<url with spaces>)

[paren](</url(foo)bar>)

[nested](</url(a(b)c)d>)

![image](https://example.com/img.png)

================================================================================
`;
